# standup-board

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  railway-template.json  railway.json
.github/workflows/: ci.yml
client/: standup
docs/: github-oauth-setup.md
docs/superpowers/plans/: 2026-07-13-sqlite-persistence.md
docs/superpowers/specs/: 2026-07-13-sqlite-persistence-design.md
skills/standup/: SKILL.md
standup_board/: app.py  github.py  mcp.py  roster.py  store.py  tokens.py  wsgi.py
tests/: test_app.py  test_client.py  test_github.py  test_init.py  test_install.py  test_login.py  test_mcp.py  test_roster.py  test_store.py  test_tokens.py  test_wsgi.py
